fix: enable permissive CORS origin patterns for cloud deployment